--- a/admin/package.json
+++ b/admin/package.json
@@ -18,7 +18,8 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
