--- a/admin/package.json
+++ b/admin/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.2",
+    "@mui/lab": "^7.0.0-beta.14",
+    "@mui/material": "^7.2.0",
     "icons": "^1.0.0",
     "react": "^19.1.0",
     "react-collapse": "^5.1.1",
