--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,7 @@
 PORT=8000
 MONGODB_URI='mongodb+srv://poojasrinivasan034:pooja0504@ecommerceapp.tb5al7g.mongodb.net/ecommerceApp?retryWrites=true&w=majority&appName=ecommerceApp'
+
+EMAIL = rinkuv.planetc@gmail.com
+EMAIL_PASS = cdmdybwluapywxsg
+
+JSON_WEB_TOKEN_SECRET_KEY = "pooja0518"
